# hwsystem-next

./: CONFIG.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.development.toml  config.example.toml  config.production.toml  config.toml
.github/workflows/: rust.yml
docs/: API.md  DATABASE.md  REQUIREMENTS.md  SECURITY.md  TODO.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250123_000001_create_tables.rs  m20250126_000001_create_system_settings.rs  m20260201_000001_add_image_compression_settings.rs
src/: errors.rs  main.rs
src/cache/: register.rs
src/cache/object_cache/: moka.rs
src/config/: impl.rs  structs.rs
src/entity/: class_users.rs  classes.rs  files.rs  grades.rs  homework_files.rs  homeworks.rs  mod.rs  notifications.rs  prelude.rs  submission_files.rs  submissions.rs  system_settings_audit.rs  users.rs
src/middlewares/: mod.rs  rate_limit.rs  require_class_role.rs  require_jwt.rs  require_role.rs
src/models/: mod.rs
src/models/auth/: responses.rs
src/models/class_users/: entities.rs  requests.rs  responses.rs
src/models/classes/: entities.rs  requests.rs  responses.rs
src/models/common/: error_code.rs  helpers.rs  mod.rs  pagination.rs  response.rs  serialization.rs
src/models/files/: entities.rs  responses.rs
src/models/grades/: entities.rs  requests.rs  responses.rs
src/models/homeworks/: entities.rs  requests.rs  responses.rs  stats_responses.rs
src/models/notifications/: entities.rs  requests.rs  responses.rs
src/models/submissions/: entities.rs  requests.rs  responses.rs
src/models/system/: entities.rs  requests.rs  responses.rs
src/models/users/: entities.rs  requests.rs  responses.rs
src/routes/: auth.rs  class_users.rs  classes.rs  files.rs  grades.rs  homeworks.rs  mod.rs  notifications.rs  submissions.rs  system.rs  users.rs  websocket.rs
src/runtime/lifetime/: startup.rs
src/services/: mod.rs
src/services/auth/: login.rs  mod.rs  profile.rs  register.rs
src/services/class_users/: delete.rs  get.rs  join.rs  list.rs  mod.rs  update.rs
src/services/classes/: create.rs  delete.rs  get.rs  (+4 more)
src/storage/: mod.rs
src/utils/: extractor.rs  file_magic.rs  jwt.rs  mod.rs  sql.rs  validate.rs
tests/: rate_limit_tests.rs  validate_tests.rs  websocket_tests.rs
tests/common/: mod.rs
(+58 files in other folders)
