[package]
name = "rust-hwsystem-next"
version = "0.0.1"
description = "A next-generation homework system based on Rust and Actix-web."
license = "MIT"
authors = ["AptS-1547 <apts-1547@esaps.net>", "Cg8-5712 <cg8.5712@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[workspace]
members = [".", "migration"]

[lib]
name = "rust_hwsystem_next"
path = "src/lib.rs"

[[bin]]
name = "rust-hwsystem-next"
path = "src/main.rs"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
actix-web = "4.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
num_cpus = "1.17.0"
tokio = { version = "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
rustls = "0.23.37"
redis = { version = "1.1.0", features = ["tokio-comp", "tokio-rustls-comp"] }
async-trait = "0.1.89"
once_cell = "1.21.4"
parking_lot = "0.12"
ctor = "0.6.3"
argon2 = "0.5"
futures-util = "0.3.32"
actix-cors = "0.7.1"
dashmap = "6.1.0"
moka = { version = "0.12.15", features = ["future"] }
actix-service = "2.0.3"
config = "0.15.22"
regex = "1.12.3"
actix-multipart = "0.7.2"
actix-files = "0.6"
uuid = "1.22.0"
rand = "0.9.2"
human-panic = "2.0.6"
paste = "1.0"
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
rust-embed = "8.11.0"
ts-rs = { version = "12.0", features = ["chrono-impl", "serde-json-impl", "no-serde-warnings"] }
actix-ws = { version = "0.3.1", default-features = false }
csv = "1.4"
calamine = "0.33"
rust_xlsxwriter = "0.93"
infer = "0.19"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
